---------------------------------------------------------------------------------------------------
Version: 0.3.29
Date: 2022-03-23
  Changes:
    - Special treatment for zombie recipes 
---------------------------------------------------------------------------------------------------
Version: 0.3.28
Date: 2022-03-19
  Bugfixes:
    - fixing crash when creating a BoilingRecipe
---------------------------------------------------------------------------------------------------
Version: 0.3.27
Date: 2022-03-18
  Changes:
    - logging of issues found in other mods improved
  Bugfixes:
    - fixing incompatible with se-space-trains
---------------------------------------------------------------------------------------------------
Version: 0.3.26
Date: 2022-03-18
  Changes:
    - pipette improved
  Bugfixes:
    - Remaining debug code removed
    - fixing incompatible Pyanodons Coal Processing
    - fixing incompatible with Industrial Revolution 2
    - fixing incompatible with both aai industry and Krastorio 2
---------------------------------------------------------------------------------------------------
Version: 0.3.25
Date: 2022-03-17
  Changes:
    - Show hidden recipes
    - Missing locales added for domains and categories
  Bugfixes:
    - Missing hidden recipe for water to steam
    - fixing Crash when loading se-energy-transmitter-chamber from space exploration mod
---------------------------------------------------------------------------------------------------
Version: 0.3.24
Date: 2022-03-14
  Changes:
    - Support for sonaxaton-research-queue
    - "open target" handler improved
    - more on fuel-category
    - pipette
    - presentation of catalyst amounts improved
    - boiler recipes improved
    - tooltip of mining recipe improved
    - BurningRecipe and RocketLaunchRecipe added
---------------------------------------------------------------------------------------------------
Version: 0.3.23
Date: 2021-10-02
  Bugfixes: